--- a/index.html
+++ b/index.html
@@ -564,11 +564,11 @@
         <div id="visitReasonSection">
     <div class="label">来店のきっかけ</div>
     <div class="oneselect-buttons">
-        <button type="button" id="oneselect" onclick="selectoneselect(this)">ネイルブック</button>
-        <button type="button" id="twoselect" onclick="selectoneselect(this)">Instagram</button>
-        <button type="button" id="threeselect" onclick="selectoneselect(this)">X(旧Twitter)</button>
-        <button type="button" id="fourselect" onclick="selectoneselect(this)">ご紹介クーポン</button>
-        <button type="button" id="fiveselect" onclick="selectoneselect(this)">その他</button>
+        <button type="button" id="chanceoneselect" onclick="selectoneselect(this)">ネイルブック</button>
+        <button type="button" id="chancetwoselect" onclick="selectoneselect(this)">Instagram</button>
+        <button type="button" id="chancethreeselect" onclick="selectoneselect(this)">X(旧Twitter)</button>
+        <button type="button" id="chancefourselect" onclick="selectoneselect(this)">ご紹介クーポン</button>
+        <button type="button" id="chancefiveselect" onclick="selectoneselect(this)">その他</button>
     </div>
 </div>
 
@@ -1246,11 +1246,11 @@
             // 選択された日時をリセット
             selectedFullDate = '';
 
-            document.getElementById('oneselect').classList.remove('active');
-            document.getElementById('twoselect').classList.remove('active');
-            document.getElementById('threeselect').classList.remove('active');
-            document.getElementById('fourselect').classList.remove('active');
-            document.getElementById('fiveselect').classList.remove('active');
+            document.getElementById('chanceoneselect').classList.remove('active');
+            document.getElementById('chancetwoselect').classList.remove('active');
+            document.getElementById('chancethreeselect').classList.remove('active');
+            document.getElementById('chancefourselect').classList.remove('active');
+            document.getElementById('chancefiveselect').classList.remove('active');
             element.classList.add('active');
             oneselectCount = element.innerText;
 
