--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 
 <body>
     <div class="container">
-        <h1>ピスタチオ<br>予約フォーム
+        <h1>ピスタチオああああ<br>予約フォーム
         </h1>
         <div class="label">お客様名※必須（カタカナ）</div>
         <input type="text" id="name" placeholder="カタカナでお名前を入力してください">
