--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 
 <body>
     <div class="container">
-        <h1>ピスタチオああああｓｄｄｓ<br>予約フォーム
+        <h1>ピスタチオ<br>予約フォーム
         </h1>
         <div class="label">お客様名※必須（カタカナ）</div>
         <input type="text" id="name" placeholder="カタカナでお名前を入力してください">
@@ -800,7 +800,7 @@
 
             // メニューが選択されていたら、各メニューを改行して表示
             const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="color:red;"><strong>【メニュー】</strong></span><br>・${selectedMenu.join('<br>・')}`
+                ? `<span style="color:red;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>・')}`
                 : '・メニューが未選択です';
 
             // オプションが選択されていたら、各オプションを改行して表示
@@ -885,8 +885,8 @@
 
             // 選択されたオプションを取得
             const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
-            selectedMenu = Array.from(updatedSelectedButtons).map(btn => btn.textContent.trim());
-            selectedSymptom = selectedMenu.join(', ');
+            selectedSymptom = Array.from(updatedSelectedButtons).map(btn => btn.textContent.trim());
+            selectedSymptom = selectedSymptom.join(', ');
 
             // メニュー時間と価格をリセット
             selectedMenuTime = 0;
