--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin-bottom: 10px;
             padding: 10px;
             font-weight: bold;
-            background-color: #13ca5e;
+            background-color: #85b425;
             color: white;
             border-radius: 4px;
             text-align: center;
@@ -106,7 +106,7 @@
             padding: 15px;
             border: none;
             border-radius: 4px;
-            background-color: #13ca5e;
+            background-color: #85b425;
             color: #fff;
             font-size: 18px;
             cursor: pointer;
@@ -166,7 +166,7 @@
         }
 
         .calendar td.selected {
-            background-color: #13ca5e;
+            background-color: #85b425;
             /* 選択されたカレンダーのセルの背景色を緑色に設定 */
             color: #fff;
             /* 選択されたセルのテキスト色を白に設定 */
@@ -511,7 +511,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: '2006140351-5q7Emp6y'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -878,7 +878,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n来院回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【みずの接骨院予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n来院回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
@@ -910,7 +910,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbwp7Y4r9mOyhBw4u_8n2vbiVyORti5CY0NFApIbZHnmxL05nTryEVxQq-waDOtneTzX/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbw8wN31h1XR9n7ZADLQ6o7cHo_TPB6TyylyoZ5Em4HSi2QzGL07ibN6ODMrEovXCOVJ/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
@@ -1061,23 +1061,12 @@ if (table.rows.length === 0) {
                         return acc;
                     }, 0);
 
-                    // 土曜日だけ12:00から19:00までを✕に設定
+                    // 土曜日だけ16:30から18:00までを✕に設定
                     if (
                         slotStart.getDay() === 6 && // 土曜日の場合
-                        ((slotStart.getHours() >= 12 && slotStart.getHours() < 19) || // 12:00から18:59
-                            (slotStart.getHours() === 19 && slotStart.getMinutes() === 0)) // 19:00ちょうど
-                    ) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                        cell.setAttribute('data-date', slotStart.toISOString());
-                        continue;
-                    }
-
-                    // 土曜日だけ12:00から19:00までを✕に設定
-                    if (
-                        slotStart.getDay() === 3 && // 土曜日の場合
-                        ((slotStart.getHours() >= 12 && slotStart.getHours() < 19) || // 12:00から18:59
-                            (slotStart.getHours() === 19 && slotStart.getMinutes() === 0)) // 19:00ちょうど
+                        ((slotStart.getHours() === 16 && slotStart.getMinutes() >= 30) ||
+                            (slotStart.getHours() === 17) ||
+                            (slotStart.getHours() === 18 && slotStart.getMinutes() < 30))
                     ) {
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
