--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n来院回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【みずの接骨院予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n来院回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
@@ -910,7 +910,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbwp7Y4r9mOyhBw4u_8n2vbiVyORti5CY0NFApIbZHnmxL05nTryEVxQq-waDOtneTzX/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbxAiGtmRlZO-qumP4HCd-WtZkDB7n5qcHhzik-m36Ph54boeYrjaOUq2PwF_BG2X7Ic/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
@@ -1138,11 +1138,6 @@ if (table.rows.length === 0) {
                     }
                     // 休日（日曜日）で、ビジネスデーでない場合
                     else if (slotStart.getDay() === 0 && !isBusinessDay && businessEventTimes.length === 0) {
-                        cell.textContent = '✕'; // 休日のため利用不可
-                        cell.classList.add('unavailable'); // 利用不可スタイルを適用
-                    }
-                    // 休日（金曜日）で、ビジネスデーでない場合
-                    else if (slotStart.getDay() === 5 && !isBusinessDay && businessEventTimes.length === 0) {
                         cell.textContent = '✕'; // 休日のため利用不可
                         cell.classList.add('unavailable'); // 利用不可スタイルを適用
                     }
