--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 
 <body>
     <div class="container">
-        <h1>みずの接骨院<br>予約フォーム</h1>
+        <h1>みずの接骨院あ<br>予約フォーム</h1>
 
         <div class="info-text">
             予約システムの方がリニューアルいたしました。<br>
@@ -516,7 +516,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2006137975-XpgGkqgL'
+                liffId: '2005254357-zKma9BZk'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
