--- a/index.html
+++ b/index.html
@@ -435,11 +435,11 @@
 
 <body>
     <div class="container">
-        <h1>みずの接骨院あ<br>予約フォーム</h1>
+        <h1>みずの接骨院<br>予約フォーム</h1>
 
         <div class="info-text">
             予約システムの方がリニューアルいたしました。<br>
-            <a href="https://liff.line.me/2006137975-XpgGkqgL" target="_blank">巻き爪専門院予約フォームはこちら</a>
+            <a href="https://liff.line.me/2005254357-zKma9BZk" target="_blank">巻き爪専門院予約フォームはこちら</a>
         </div>
 
         <div class="label">お客様名※必須</div>
@@ -863,13 +863,13 @@
                 return;
             }
 
-            if (!formData.phone) {
-                alert('電話番号を入力してください。');
+            if (!formData.visitCount) {
+                alert('ご来院回数を選択してください。');
                 return;
             }
 
-            if (!formData.visitCount) {
-                alert('ご来院回数を選択してください。');
+            if (!formData.selectedSymptom) {
+                alert('メニューを選択してください。');
                 return;
             }
 
