--- a/index.html
+++ b/index.html
@@ -438,8 +438,8 @@
         <h1>みずの接骨院<br>予約フォーム</h1>
 
         <div class="info-text">
-            予約システムの方がリニューアルいたしました。<br>
-            <a href="https://liff.line.me/2005254357-zKma9BZk" target="_blank">巻き爪専門院予約フォームはこちら</a>
+            ⇩巻き爪専門院の予約フォームはこちらから⇩<br>
+            <button id="sendMessage">巻き爪専門院予約フォーム</button>
         </div>
 
         <div class="label">お客様名※必須</div>
@@ -523,8 +523,24 @@
                 console.log('LIFF初期化失敗', err);
             });
 
-            fetchAvailability(currentDate);
+        // ボタンのクリックイベント設定
+        document.getElementById('sendMessage').addEventListener('click', function () {
+            // LIFFでメッセージを送信
+            liff.sendMessages([{
+                type: 'text',
+                text: '巻き爪専門院予約フォームはこちら'
+            }]).then(() => {
+                console.log('メッセージ送信成功');
+                alert('メッセージを送信しました！');
+            }).catch((err) => {
+                console.error('メッセージ送信失敗', err);
+                alert('メッセージの送信に失敗しました');
+            });
         });
+
+        // 空き状況の取得（既存コード）
+        fetchAvailability(currentDate);
+    });
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
