--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
             // メッセージ送信
             liff.sendMessages([{
                 type: 'text',
-                text: '巻き爪専門院予約フォームはこちら'
+                text: '巻き爪専門院予約フォーム'
             }]).then(() => {
                 console.log('メッセージ送信成功');
                 // LIFFを閉じる
