--- a/index.html
+++ b/index.html
@@ -820,9 +820,9 @@
             } else {
                 // 初めての場合、元のメニューに戻す
                 symptomsContainer.innerHTML = `
-            <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="6500">新規様_産後の骨盤矯正プログラム</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="4500">新規様_マタニティ</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="8700">新規様_姿勢・頭痛・外反母趾・尿もれ</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="6500">産後の骨盤矯正プログラム</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="4500">マタニティ</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="8700">姿勢・頭痛・外反母趾・尿もれ</button>
         `;
             }
 
