--- a/index.html
+++ b/index.html
@@ -1367,7 +1367,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\n選択肢：${formData.oneselectCount}\nネイルオフの有無：${formData.nailCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount},${formData.gelCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\n来店のきっかけ：${formData.oneselectCount}\nネイルオフの有無：${formData.nailCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount},${formData.gelCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
