--- a/index.html
+++ b/index.html
@@ -399,10 +399,10 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪お問い合わせフォーム≫\n【お名前】：${formData.name}\n【電話番号】：${formData.phone}\n【お問い合わせ区別】：${formData.mrCount}\n【その他】：${formData.others}\n【面談希望場所】：${formData.visitCount}\n【出張面談希望】：${formData.business}\n【メッセージ】：${formData.message}`
+                text: `≪お問い合わせフォーム≫\n【お名前】\n・${formData.name}\n【電話番号】\n・${formData.phone}\n【お問い合わせ区別】\n・${formData.mrCount}\n【その他】\n・${formData.others}\n【面談希望場所】\n・${formData.visitCount}\n【出張面談希望】\n・${formData.business}\n【メッセージ】\n・${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
-                alert('当日のキャンセルは無いようにお願いいたします。');
+                alert('お問い合わせありがとうございます。\n"OK"をタップしてください。');
                 /* LIFFウィンドウを閉じる */
                 liff.closeWindow();
             }).catch((err) => {
