--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
 <body>
     <div class="container">
-        <h1>LANI<br>予約フォーム
+        <h1>LANI 茨木店<br>予約フォーム
         </h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
